[gd_scene load_steps=2 format=3 uid="uid://hud_01"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthLabel" type="Label" parent="Control"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "HP: 10/10"

[node name="ManaLabel" type="Label" parent="Control"]
layout_mode = 1
offset_left = 20.0
offset_top = 55.0
offset_right = 150.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Mana: 50/50"

[node name="GoldLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Gold: 0"
horizontal_alignment = 2

[node name="WaveLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Wave: 1"
horizontal_alignment = 1

[node name="EnemyLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 55.0
offset_right = 100.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "Enemies: 0 / 0"
horizontal_alignment = 1
